<?xml version="1.0"?>
<package format="2">
  <name>eskf_imu_gps</name>
  <version>0.1.0</version>
  <description>The eskf_imu_gps package</description>

  <maintainer email="rick@connect.polyu.hk">rick</maintainer>


  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <exec_depend>tf</exec_depend>tf_conversions
  <exec_depend>tf_conversions</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
